assets/css/style.scss
---
---

/*
  If the number of TAB files has changed, the following variable is required.
  And it must be defined before `@import`.
*/
$tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab

@import "{{ site.theme }}";

/* append your custom style below */

/* Site title */

#sidebar .site-title a {
  color: #05656f;
}
@mixin title-color-dark {
  #sidebar .site-title a {
    color: #30959f;
  }
}

/* Bold text */

b, strong {
  font-weight: 600;
  color: black
}

@mixin strong-color-dark {
  b, strong {
    color: white;
  }
}

/* Alerts */

.alert-warning .fas {
  color: orange;
}
.alert-info .fas {
  color: navy;
}

@mixin alerts-dark {
  .alert-warning {
    color: #b4ab91;
    background-color: #3a372f;
    border: 1px solid #8d8671;
    .fas {
      color: orange;
    }
  }
  .alert-info {
    color: #18acc3;
    background-color: #07333a;
    border: 1px solid #10707f;
    .fas {
      color: #5d73ff;
    }
  }
}

/* Fix blockquote color */

.quote {
  color: #666;
}
@mixin quote-dark {
  .quote {
    color:#888;
  }
}

/* Dashed table */

table.dashed-table tbody tr, table.dashed-table tbody td {
  border: 1px dashed #999;
}

/* Dark theme mixins */

@mixin dark-theme-mixins {
  @include strong-color-dark;
  @include title-color-dark;
  @include alerts-dark;
  @include quote-dark;
}
html[mode=dark] {
  @include dark-theme-mixins;
}
@media screen and (prefers-color-scheme: dark) {
  @include dark-theme-mixins;
}

